@@ -1,10 +1,5 @@
 <?xml version='1.0'?>
 <xmas:flash xmlns:xmas="http://xdaq.web.cern.ch/xdaq/xsd/2006/xmas-10" id="urn:xdaq-flashlist:evf-idie-cpu-load" version="$Revision: 1.1 $" key="run,lumi">
-	<!--
-	<xmas:item name="sessionid"             function="session()" type="string"/>
-        <xmas:item name="timestamp"             function="systime()" type="time"/>
-        <xmas:item name="context"               function="context()" type="string"/>
-	-->
 	<xmas:item name="run"                   infospace="urn:evf-idie-cpu-load" type="unsigned int 32"/>
         <xmas:item name="lumi"                  infospace="urn:evf-idie-cpu-load" type="unsigned int 32"/>
         <xmas:item name="load"                  infospace="urn:evf-idie-cpu-load" type="float"/>
