@@ -1,11 +1,7 @@
 <?xml version='1.0'?>
-<xmas:flash xmlns:xmas="http://xdaq.web.cern.ch/xdaq/xsd/2006/xmas-10" id="urn:xdaq-flashlist:evf-idie-cpu-max-load" version="$Revision: 1.1 $" key="run">
-	<!--
-	<xmas:item name="sessionid"             function="session()" type="string"/>
-        <xmas:item name="timestamp"             function="systime()" type="time"/>
-        <xmas:item name="context"               function="context()" type="string"/>
-	-->
+<xmas:flash xmlns:xmas="http://xdaq.web.cern.ch/xdaq/xsd/2006/xmas-10" id="urn:xdaq-flashlist:evf-idie-cpu-max-load" version="$Revision: 1.2 $" key="run">
 	<xmas:item name="run"                   infospace="urn:evf-idie-cpu-load" type="unsigned int 32"/>
+        <xmas:item name="time"                  infospace="urn:evf-idie-cpu-load" type="time"/>
         <xmas:item name="lumi"                  infospace="urn:evf-idie-cpu-load" type="unsigned int 32"/>
         <xmas:item name="load"                  infospace="urn:evf-idie-cpu-load" type="float"/>
         <xmas:item name="loadPS"                infospace="urn:evf-idie-cpu-load" type="float"/>
